--- a/lw5/css/style1.css
+++ b/lw5/css/style1.css
@@ -1,42 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 .photo
 {
-    border-radius: 5px;
-    background-color: #132d36;    
+    border-radius: 5px; 
 }
-.phrase__quote
+.clear
+{
+    clear: both;
+}
+.quote
 {
     font-size: 28px;
     line-height: 42px;
     color: #848484;
-    font-weight: 100; 
+    font-weight: 400;
     font-style: italic;
     font-family: "Georgia";    
 }
-.phrase__quotes-author
+.author
 {
     font-size: 16px;
     line-height: 42px;
     color: #333333;
     font-weight: 600;
-    font-family: "Open Sans";  
+    font-family: "Open Sans";    
 }
-.list
-{
-    font-size: 19px;
-    line-height: 36px;
-    color: #555555;
-    font-family: "Georgia";  
-}
-.list-name
+.title
 {
     font-size: 24px;
     line-height: 32px;
     color: #15a98c;
     font-weight: 600;
-    font-family: "Open Sans";
+    font-family: "Open Sans";    
 }
-.owner-name
+.content
+{
+    font-size: 19px;
+    line-height: 36px;
+    color: #555555;
+    font-family: "Georgia";    
+}
+.owner
 {
     font-size: 48px;
     line-height: 42px;
@@ -46,17 +48,12 @@
 }
 .rectangle
 {
+    width: 60px;
+    height: 6px;
     border-radius: 3px;
     background-color: #45c3aa;    
 }
-.about-me
-{
-    font-size: 19px;
-    line-height: 32px;
-    color: #555555;
-    font-family: "Georgia";    
-}
-.article-name
+.articlename
 {
     font-size: 36px;
     line-height: 42px;
@@ -73,13 +70,32 @@
 }
 .feedback
 {
+    width: 180px;
     font-size: 19px;
-    line-height: 32px;
+    line-height: 20px;
     color: #15a98b;
     font-family: "Georgia";    
 }
+.feedback__text
+{
+    float: left;
+    margin: 0 10px 0 0;
+    border-bottom: #15a98b solid 1px;   
+}
+.feedback__arrow
+{
+    color: #15a98b;
+    font-family: "Georgia";  
+}
 .feedback:hover
 {
+    font-size: 19px;
+    line-height: 20px;
     color: #098d72;
-    font-family: "Georgia"; 
+    font-family: "Georgia";    
+}
+.feedback__arrow:hover
+{
+    color: #098d72;
+    font-family: "Georgia";    
 }
